fixed color spilling over in tutorial

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,5 +1,8 @@
 page-TutorialRSLSearch {
-
+  h1 {
+    font-size: 13pt;
+    white-space: normal;
+  }
 }
 .swipe_left {
   // background-image: url("https://static.thenounproject.com/png/255751-200.png");
